--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
 [project]
-name = "eval-driven-dev-handbook"
+name = "agent-dev-handbook"
 version = "0.1.0"
-description = "Practical guide to Evaluation-Driven Development for agentic systems"
+description = "Practical guide to agent development"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "langgraph>=0.2.0",
-    "langchain>=0.3.0",
-    "langchain-openai>=0.2.0",
+    "langgraph>=1.0.6",
+    "langchain>=1.2.3",
+    "langchain-core>=1.2.7",
+    "langchain-openai>=1.1.7",
+    "google-adk>=1.22.1",
     "google-cloud-aiplatform>=1.60.0",
     "pandas>=2.0.0",
     "numpy>=1.24.0",
@@ -20,9 +22,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "black>=23.0.0",
-    "isort>=5.12.0",
-    "flake8>=6.0.0",
+    "ruff>=0.8.0",
     "mypy>=1.5.0",
     "pre-commit>=3.0.0",
 ]
@@ -31,13 +31,15 @@ dev = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.black]
+[tool.ruff]
 line-length = 88
-target-version = ['py312']
+target-version = "py312"
 
-[tool.isort]
-profile = "black"
-line_length = 88
+[tool.ruff.lint]
+select = ["E", "F", "I"]  # E/F = flake8 rules, I = isort rules
+
+[tool.ruff.format]
+# Ruff's formatter is black-compatible
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
